[package]
name = "tree_traversal"
version = "0.1.0"
authors = ["Kevin Tran <kevintran@airmail.cc>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
quickcheck_macros = "0.9.1"
rand = "0.7.3"
quickcheck = "0.9.2"
